H1 Hhm Hgm Ham H2 inequality proof

--- a/common/sums.tex
+++ b/common/sums.tex
@@ -487,6 +487,7 @@ Let $\Rx$ be the set of extended real numbers $\brp{\Rx\eqd\R\setu\setn{-\infty,
 \index{arithmetic mean geometric mean inequality}
 \index{generalized arithmetic mean geometric mean inequality}
 \index{inequalities!AM-GM}
+\label{cor:hm_gm_am}
 %--------------------------------------
 Let $\tuplen{x_n}_1^\xN$ be a tuple. Let $\tuplen{\lambda_n}_1^\xN$ be a tuple of weighting values such that
 $\ds\sum_{n=1}^\xN\lambda_n=1$.
